# patternify-bot

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  build_image.yml
src/: handlers.rs  main.rs
